test/conformance/chainsaw/generating-policies/existing/sync-generate-existing-restart-background-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sync-generate-existing-restart-background-controller
