test/conformance/chainsaw/generating-policies/existing/sync-generate-existing-restart-background-controller/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: sync-generate-existing-restart-background-controller
  namespace: sync-generate-existing-restart-background-controller
data:
  key: value
